--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@arco-design/web-vue": "^2.56.2",
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
-    "electron-updater": "^6.1.7"
+    "electron-updater": "^6.1.7",
+    "monaco-editor": "0.52.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
@@ -41,7 +42,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.26.0",
     "prettier": "^3.3.2",
+    "sass-embedded": "^1.80.3",
     "typescript": "^5.5.2",
+    "unocss": "^0.63.4",
     "vite": "^5.3.1",
     "vue": "^3.4.30",
     "vue-tsc": "^2.0.22"
