--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "@electron-toolkit/preload": "^3.0.0",
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
-    "monaco-editor": "0.52.0"
+    "monaco-editor": "0.52.0",
+    "pinia": "^2.2.4"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
