--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@electron-toolkit/utils": "^3.0.0",
     "electron-updater": "^6.1.7",
     "monaco-editor": "0.52.0",
-    "pinia": "^2.2.4"
+    "node-xlsx": "^0.24.0",
+    "pinia": "^2.2.4",
+    "vue3-excel-editor": "^1.0.59"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.2",
